--- a/Wartime Secrets/package.json
+++ b/Wartime Secrets/package.json
@@ -9,5 +9,13 @@
     "@sliit-foss/actions-exec-wrapper": "1.1.1",
     "@sliit-foss/bashaway": "1.6.0-blizzard.5",
     "jest": "29.6.2"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
